--- a/QuestOverlayPlugin/Overlay/QuestListButton.xaml
+++ b/QuestOverlayPlugin/Overlay/QuestListButton.xaml
@@ -1,9 +1,6 @@
 ﻿<UserControl x:Class="QuestOverlayPlugin.Overlay.QuestListButton"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             mc:Ignorable="d" >
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" >
     <Grid>
         <Border CornerRadius="3" Margin="0,1,30,5" Background="#221717" BorderBrush="#110C0C" BorderThickness="2">
             <TextBlock Text="Quests" Foreground="White" TextAlignment="Center" VerticalAlignment="Center" FontWeight="SemiBold" FontSize="18" Margin="20,0,40,0" />
