--- a/QuestOverlayPlugin/Overlay/QuestListButton.xaml
+++ b/QuestOverlayPlugin/Overlay/QuestListButton.xaml
@@ -1,6 +1,6 @@
 ﻿<UserControl x:Class="QuestOverlayPlugin.Overlay.QuestListButton"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" >
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" Canvas.Bottom="128" Canvas.Right="16">
     <Grid>
         <Border CornerRadius="3" Margin="0,1,30,5" Background="#221717" BorderBrush="#110C0C" BorderThickness="2">
             <TextBlock Text="Quests" Foreground="White" TextAlignment="Center" VerticalAlignment="Center" FontWeight="SemiBold" FontSize="18" Margin="20,0,40,0" />
