--- a/QuestOverlayPlugin/Overlay/QuestView.xaml
+++ b/QuestOverlayPlugin/Overlay/QuestView.xaml
@@ -1,19 +1,29 @@
-﻿<UserControl x:Class="QuestOverlayPlugin.Overlay.QuestView"
+﻿<UserControl
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:controls="clr-namespace:QuestOverlayPlugin.Controls" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:controls="clr-namespace:QuestOverlayPlugin.Controls"
-             mc:Ignorable="d">
+             xmlns:local="clr-namespace:QuestOverlayPlugin.Overlay"
+             x:Class="QuestOverlayPlugin.Overlay.QuestView" 
+             mc:Ignorable="d"
+             d:DataContext="{d:DesignInstance {x:Type local:QuestViewModel}}">
     <UserControl.Resources>
         <controls:ProgressBarFillWidthConverter x:Key="ProgressBarFillWidthConverter" />
+        <controls:BoolToVisibleOrHiddenConverter x:Key="BoolToVisibleOrHiddenConverter" />
     </UserControl.Resources>
     <Grid Width="478">
         <Border Background="#221717" BorderBrush="#110C0C" BorderThickness="2" CornerRadius="3" Margin="50,0,0,0">
             <DockPanel Margin="109,8,8,8" MinWidth="280">
-                <TextBlock Text="{Binding Title}" d:Text="Weekly" Foreground="White" FontWeight="SemiBold" FontSize="18" DockPanel.Dock="Top" />
+                <Grid DockPanel.Dock="Top">
+                    <TextBlock Text="{Binding Title}" d:Text="Weekly" Foreground="White" FontWeight="SemiBold" FontSize="18" HorizontalAlignment="Left" />
+                    <DockPanel Height="24" HorizontalAlignment="Right" Visibility="{Binding HasXpReward, Converter={StaticResource BoolToVisibleOrHiddenConverter}}">
+                        <Image Source="pack://application:,,,/QuestOverlayPlugin;component/Resources/Rewards_Track_-_XP_Boost.png" RenderOptions.BitmapScalingMode="Fant" Height="24" DockPanel.Dock="Right" Width="24" HorizontalAlignment="Right" Margin="0,-2,-2,0" />
+                        <controls:HearthstoneTextBlock Text="{Binding XpReward}" d:Text="1100"  Fill="{Binding BonusXpColor}" d:Fill="#60ff08"  FontSize="16" HorizontalAlignment="Right" DockPanel.Dock="Right" Margin="0,-2,0,0" />
+                    </DockPanel>
+                </Grid>
                 <Grid DockPanel.Dock="Bottom" Margin="0,4,0,0">
-                    <Border Name="ProgressBar" Background="#110C0C" CornerRadius="3">
+                    <Border x:Name="ProgressBar" Background="#110C0C" CornerRadius="3">
                         <Border Background="#6E1E1E" CornerRadius="3" HorizontalAlignment="Left" d:Width="150">
                             <Border.Width>
                                 <MultiBinding Converter="{StaticResource ProgressBarFillWidthConverter}">
