--- a/QuestOverlayPlugin/Overlay/QuestListButton.xaml
+++ b/QuestOverlayPlugin/Overlay/QuestListButton.xaml
@@ -1,10 +1,21 @@
 ﻿<UserControl x:Class="QuestOverlayPlugin.Overlay.QuestListButton"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:controls="clr-namespace:QuestOverlayPlugin.Controls"
+             xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             xmlns:local="clr-namespace:QuestOverlayPlugin.Overlay"
+             mc:Ignorable="d" 
+             d:DataContext="{d:DesignInstance {x:Type local:QuestListViewModel}}">
+    <UserControl.Resources>
+        <controls:BoolToVisibleOrHiddenConverter x:Key="BoolToVisibleOrHiddenConverter" />
+        <controls:BoolToVisibleOrHiddenNotConverter x:Key="BoolToVisibleOrHiddenNotConverter" />
+    </UserControl.Resources>
     <Grid>
         <Border CornerRadius="3" Margin="0,1,30,5" Background="#221717" BorderBrush="#110C0C" BorderThickness="2">
             <TextBlock Text="Quests" Foreground="White" TextAlignment="Center" VerticalAlignment="Center" FontWeight="SemiBold" FontSize="18" Margin="20,0,40,0" />
         </Border>
-        <Image Source="pack://application:,,,/QuestOverlayPlugin;component/Resources/QuestIcon.png" Height="60" HorizontalAlignment="Right" RenderOptions.BitmapScalingMode="Fant" />
+        <Image d:Visibility="Visible" Source="pack://application:,,,/QuestOverlayPlugin;component/Resources/QuestIcon.png" Height="60" HorizontalAlignment="Right" RenderOptions.BitmapScalingMode="Fant" Visibility="{Binding IsBattlegrounds, Converter={StaticResource BoolToVisibleOrHiddenNotConverter}}" />
+        <Image d:Visibility="Hidden" Source="pack://application:,,,/QuestOverlayPlugin;component/Resources/FSG_Icon_FX.png" Height="62" HorizontalAlignment="Right" RenderOptions.BitmapScalingMode="Fant" Visibility="{Binding IsBattlegrounds, Converter={StaticResource BoolToVisibleOrHiddenConverter}}" Margin="0,-7,-3,0" />
     </Grid>
 </UserControl>
